Fix cherry pick compile errors