@@ -4,10 +4,9 @@ import stroom.meta.api.AttributeMap;
 import stroom.security.api.UserIdentity;
 import stroom.util.NullSafe;
 
-import jakarta.servlet.http.HttpServletRequest;
-
 import java.util.List;
 import java.util.Optional;
+import javax.servlet.http.HttpServletRequest;
 
 public interface AuthenticatorFilter {
 
@@ -27,8 +26,8 @@ public interface AuthenticatorFilter {
     static AuthenticatorFilter wrap(final List<AuthenticatorFilter> attributeMapFilters) {
         if (NullSafe.isEmptyCollection(attributeMapFilters)) {
             return UNAUTHENTICATED_FILTER;
-        } else if (attributeMapFilters.size() == 1 && attributeMapFilters.getFirst() != null) {
-            return attributeMapFilters.getFirst();
+        } else if (attributeMapFilters.size() == 1 && attributeMapFilters.get(0) != null) {
+            return attributeMapFilters.get(0);
         } else {
             return new MultiAuthenticatorFilter(attributeMapFilters);
         }
